hphp/hack/test/typecheck/expression_trees/nested_splicing.php.exp
File "nested_splicing.php", line 6, characters 10-13:
Encountered unexpected text `${4}`, was expecting a expression. (Parsing[1002])
